--- a/.gitignore
+++ b/.gitignore
@@ -408,7 +408,7 @@ do {
             {
                 break;
             } else {
-                printf("Input tidak valid! Masukkan 1 atau 2\n");
+                printf("\nInput tidak valid! Masukkan 1 atau 2\n");
             }
         }   
 
@@ -434,7 +434,7 @@ do {
             {
                 break;
             } else {
-                printf("Input tidak valid! Masukkan 1 atau 2\n");
+                printf("\nInput tidak valid! Masukkan 1 atau 2\n");
             }
         }
 
@@ -461,7 +461,7 @@ do {
             {
                 break;
             } else {
-                printf("Input tidak valid! Masukkan 1 atau 2\n");
+                printf("\nInput tidak valid! Masukkan 1 atau 2\n");
             }
         }
 
@@ -487,7 +487,7 @@ do {
             {
                 break;
             } else {
-                printf("Input tidak valid! Masukkan 1 atau 2\n");
+                printf("\nInput tidak valid! Masukkan 1 atau 2\n");
             }
         }
 
